--- a/css/style.css
+++ b/css/style.css
@@ -435,8 +435,9 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
               justify-content: center;}
 
   .landing {  background-position: center center;                     
-              width:  auto ;
-              height:   110vh ;
+               height:   110vh ;
+               width:  100% ;
+              min-width:  113vw ;
               flex-direction: row ;
               flex-wrap: nowrap;}
  
@@ -536,7 +537,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
 
 
   .Testimonials { background-position: center center;
-                  width: auto;
+                  width: auto;  min-width:  113vw ;
                   height:100%; }
 
   .Testimonials div div:nth-child(1) {
@@ -572,7 +573,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
 
   
 
-.Gallery { 
+.Gallery {    
       margin-bottom: 20px;
       width: 100% ;  
       height: auto;
@@ -605,7 +606,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
                      padding: 0 20px;
                      font-size: 23px;}
 
-   .Contact_us { width: auto;  
+   .Contact_us { width: auto;    min-width:  113vw ;
                  height: auto;
                  padding: 20px 28px; }
  
