--- a/css/style.css
+++ b/css/style.css
@@ -426,7 +426,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
  
 @media (max-width: 768px) {  
  
-   body{    width: auto;}
+   body{    width: 80vw;}
 
   .container { 
               flex-direction: column ;
@@ -437,7 +437,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
   .landing {  background-position: center center;                     
                height:   110vh ;
                width:  100% ;
-              min-width:  113vw ;
+              min-width:  125vw ;
               flex-direction: row ;
               flex-wrap: nowrap;}
  
@@ -497,48 +497,52 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
  
  
 
-.middle {         position: static;
+.middle {         display: flex; 
+                  text-align: center;
                   flex-direction: column;
                   margin: 20px 0 ;
-                  padding: 0 30px;
-                  width: auto ;}
-
+                  min-width:  80vw ;
+                  padding: 0 10px 0 10px; }
  
 
 
-  .star {       font-size: 24px;
-                width: 100%;
-                margin: 0 0 60px 0;
-                padding: 0 10px;
+  .star {      text-align: center;
+                font-size: 24px;
+                margin-right: 50px;
+                padding: 0 20px;
                 line-height: 1.4 ;}
 
   .in{ margin: 0;}
   
   .top:not(.in) { margin-left: 80px;  }
 
-  .box {     flex-basis: 100%;
-             margin: 20px 0;
-             padding: 20px 1px 15px;
-             font-size: 18px;
-             width: 100%; }
+  .box {     margin: -40px 50px;
+             padding: 20px 53px 15px;
+             font-size: 18px;}
 
-  .icons   { margin-left: 10px;
+  .icons   { margin-right: 150px;
              color: var(--maincolor);
              font-size: 46px; 
              display: block ; 
              margin-top: auto;
              margin-bottom: 8px;} 
  
-  .buttons { gap: 160px !important;} 
+  .buttons { gap: 70px !important; z-index: 100;} 
+  
 
   div button  {  display: block;  
-                 margin-left:   -50px;
+                 margin-left:   -10px;
                  width: 40%;}
 
 
-  .Testimonials { background-position: center center;
-                  width: auto;  min-width:  113vw ;
-                  height:100%; }
+  .Testimonials { background-size:cover;
+                  background-position: center center;
+                  background-image: url(../imgs/infinite-loop-02.jpg);
+                  width: auto;
+                  height:100%;
+                  margin-left: 0;
+                  padding: 40px 100px;
+                  display: block;}
 
   .Testimonials div div:nth-child(1) {
     position: static;
@@ -573,13 +577,13 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
 
   
 
-.Gallery {    
-      margin-bottom: 20px;
-      width: 100% ;  
-      height: auto;
-      margin-left: 0;
-      padding: 17px 10px;
-      display: block;}   
+.Gallery {  min-width:  120vw ;
+            margin-bottom: 400px;
+            width: 100% ;  
+            height: auto;
+            margin-left: 0;
+            padding: 17px 10px;
+            display: block;}   
 
   .Gallery .container div img {
                             width: 50vh;
@@ -596,23 +600,33 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
                             margin-left: 8px;    
                             padding: -200px 20px 0;}
 
-.Gallery .container div p{  text-align: center ; 
+.Gallery .container div p{ 
+                            text-align: center ; 
                             padding:0  50% 80px 10% ;
                             font-weight: 250 ;
                             font-size: 30px; }
 
-  .Gallery .frist {  position: static ;
-                     margin: 0 0 20px 0;
-                     padding: 0 20px;
-                     font-size: 23px;}
+  .Gallery .frist {
+                position: static ;
+                margin: 0 0 20px 0;
+                padding: 0 20px;
+                font-size: 28px;
+                text-align: center;}
 
-   .Contact_us { width: auto;    min-width:  113vw ;
-                 height: auto;
-                 padding: 20px 28px; }
+   .Contact_us {font-size: 20px; 
+                background-size: cover;      
+                background-image: url(../imgs/infinite-loop-03.jpg);
+                width: 100%; min-width:  118vw ;
+                height: 100%;
+                margin-left: 12px;
+                margin-top: -190px;
+                padding: 20px 10px;
+                display: block;
+                text-align: center;}
  
 .Contact_us div .frist{  
                          margin:50px auto 20px ;
-                         padding: 0 44px;
+                         padding: 0 34px;
                          font-size: 29px ; 
                          font-weight: 200;
                          text-align: center ;
@@ -622,7 +636,9 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
 
    
 
-form {    margin: 60px auto 10px ;  width: 90%;}
+form {  
+          margin: 60px auto 10px ;
+          width: 90%;}
 
   input {
             width: 100% ;
@@ -664,7 +680,8 @@ form {    margin: 60px auto 10px ;  width: 90%;}
               margin-bottom: 20px ;
               margin-left: 0 ;
               margin-right: 0  }
-}             
+}   
+                 
 
 @media (min-width: 769px)  {  .bars {display: none; } 
 
