--- a/css/style.css
+++ b/css/style.css
@@ -436,7 +436,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
 
   .landing {  background-position: center center;                     
                height:   110vh ;
-               width:  100% ;
+               width:  auto% ;
               min-width:  225vw ;
               flex-direction: row ;
               flex-wrap: nowrap;}
@@ -775,3 +775,4 @@ form {
   .landing   { width: 100%; } 
 
 .Contact_us { height: 100%;}    }     
+
