--- a/css/style.css
+++ b/css/style.css
@@ -109,14 +109,14 @@
            align-items: flex-start;
            justify-content: space-between;
            padding:3% 7% 3% 7%  ;
-           color: gray; 
+           color: rgb(53, 53, 53); 
            font-size: 25px ;
            font-family: 'Open Sans', Arial, sans-serif;
            flex-basis: 49%;      
            position:relative;            
           font-weight: 60;} 
 
-.middle{  color: rgb(27, 27, 27);
+.middle{   color: rgb(27, 27, 27);
            font-size: 20px;    
            display: flex;
            flex-direction: row;          
@@ -436,8 +436,8 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
 
   .landing {  background-position: center center;                     
                height:   110vh ;
-               width:  auto% ;
-              min-width:  225vw ;
+               width:  100% ;
+              min-width:  125vw ;
               flex-direction: row ;
               flex-wrap: nowrap;}
  
@@ -773,7 +773,4 @@ form {
 
 @media  (min-width: 1025px) { 
   .landing   { width: 100%; } 
-
 .Contact_us { height: 100%;}    }     
-
-
