--- a/css/style.css
+++ b/css/style.css
@@ -422,8 +422,6 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
     
     .list{   background-color: rgb(255, 12, 12);color:gray;  padding: auto 200px  ;  }
     
- 
- 
 @media (max-width: 768px) {  
  
    body{    width: 80vw;}
@@ -436,7 +434,8 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
 
   .landing {  background-position: center center;                     
                height:   110vh ;
-               width:  100% ;
+               
+              width:  125vw ;
               min-width:  125vw ;
               flex-direction: row ;
               flex-wrap: nowrap;}
@@ -680,9 +679,7 @@ form {
               margin-bottom: 20px ;
               margin-left: 0 ;
               margin-right: 0  }
-}   
-                 
-
+}
 @media (min-width: 769px)  {  .bars {display: none; } 
 
 }
