--- a/css/style.css
+++ b/css/style.css
@@ -434,9 +434,8 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
 
   .landing {  background-position: center center;                     
                height:   110vh ;
-               
-              width:  175vw ;
-              min-width:  125vw ;
+              /* width:  175vw ; */
+                width:  auto-fill ;
               flex-direction: row ;
               flex-wrap: nowrap;}
  
@@ -537,7 +536,8 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
   .Testimonials { background-size:cover;
                   background-position: center center;
                   background-image: url(../imgs/infinite-loop-02.jpg);
-                  width: 155vw;
+                  /* width: 155vw; */
+                  width:  auto-fill ;
                   height:100%;
                   margin-left: 0;
                   padding: 40px 100px; }
@@ -613,7 +613,8 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
    .Contact_us {font-size: 20px; 
                 background-size: cover;      
                 background-image: url(../imgs/infinite-loop-03.jpg);
-                width:  170vw ;
+                /* width:  170vw ; */
+                width:  auto-fill ;
                 height: 100%;
                 margin-left: 12px;
                 margin-top: -190px;
