--- a/css/style.css
+++ b/css/style.css
@@ -435,7 +435,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
   .landing {  background-position: center center;                     
                height:   110vh ;
               /* width:  175vw ; */
-                width:  auto-fill ;
+                width:  fit-content ;
               flex-direction: row ;
               flex-wrap: nowrap;}
  
@@ -505,7 +505,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
 
 
   .star {      text-align: center;
-                font-size: 24px;
+                font-size: 38px;
                 margin-right: 50px;
                 padding: 0 20px;
                 line-height: 1.4 ;}
@@ -516,7 +516,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
 
   .box {     margin: -40px 50px;
              padding: 20px 53px 15px;
-             font-size: 18px;}
+             font-size: 38px;}
 
   .icons   { margin-right: 150px;
              color: var(--maincolor);
@@ -537,7 +537,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
                   background-position: center center;
                   background-image: url(../imgs/infinite-loop-02.jpg);
                   /* width: 155vw; */
-                  width:  auto-fill ;
+                  width:  fit-content ;
                   height:100%;
                   margin-left: 0;
                   padding: 40px 100px; }
@@ -575,7 +575,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
 
   
 
-.Gallery {  width:  120vw ;
+.Gallery {  width:  fit-content ;
             margin-bottom: 400px;  
             height: auto;
             margin-left: 0;
@@ -614,7 +614,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
                 background-size: cover;      
                 background-image: url(../imgs/infinite-loop-03.jpg);
                 /* width:  170vw ; */
-                width:  auto-fill ;
+                width:  fit-content ;
                 height: 100%;
                 margin-left: 12px;
                 margin-top: -190px;
@@ -683,7 +683,7 @@ form {
 
 }
 
-@media (min-width: 769px) and (max-width: 1024px) { 
+@media (min-width: 769px) and (max-width: 1040px) { 
   
    
   body { width: 95vw;}
@@ -767,6 +767,6 @@ form {
 }
   
 
-@media  (min-width: 1025px) { 
+@media  (min-width: 1041px) { 
   .landing   { width: 100%; } 
 .Contact_us { height: 100%;}    }     
