--- a/css/style.css
+++ b/css/style.css
@@ -397,7 +397,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
                justify-content: center; 
                padding: 6px 25px;
                display: flex;
-               bottom :250px ;  
+               bottom :200px ;  
                right: 8%;
                position: relative; 
                border-radius: 2%; } 
@@ -424,8 +424,8 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
     
 @media (max-width: 768px) {  
  
-   /* body{    width: 80vw;} */
-   
+    
+   /* body {  width:30vw ; overflow-x: hidden;} */
 
   .container { 
                display: flex;
@@ -500,7 +500,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
                   text-align: center;
                   flex-direction: column;
                   margin: 30px 0 ;
-                  /* width:  20vw ; */
+                  width:  20vw !important ;
                   padding: 0 10px 0 70px !important; }
  
 
@@ -541,7 +541,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
 
 
   .Testimonials {  
-                  /* width:  ; */
+                  /* width:  auto; */
                    height:100%;  
                   /* margin-left: 0; */
                   padding: 40px 600px; }
@@ -562,8 +562,10 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
 
   
 
-.Gallery {  width: auto-fill ;
+.Gallery {  
             margin-bottom: 400px;  
+            width: auto ;
+           /* width: auto-fill ; */
             height: auto;
             margin-left: 0;
             /* padding: 17px 160px;  */
@@ -614,6 +616,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
 
 
    .Contact_us { 
+                /* width:  370vw ;  */
                 width:  auto ; 
                 height: 390vh ; 
                 margin-top: -190px;
